# Dihadron_FF

./: BSpline.h  BSpline_Interpolate.h  BSpline_Interpolate1D.h  BSpline_Interpolate2D.h  BSpline_Interpolate3D.h  CMakeCache.txt  CMakeLists.txt  DiFF_TMD.h  Field-FeynmanModel.h  Field-FeynmanModel_TMD.h  Integration.h  MyProject  QCDNUM_Evolution.h  README.md  Spline_Interpolate.h  Tools.h  coefficients3D.txt  conanfile.txt  main.cc  save_DiFF_z1_z2_interpolation.h  test_BSpline_interpolate.h
cmake/: BsplineConfig.cmake.in
examples/: bspline_example  example_main.cc
include/: BSpline.h  BSpline_Interpolate.h  DiFF_TMD.h  Field-FeynmanModel.h  Integration.h  QCDNUM_Evolution.h  Tensor.h  Tools.h
output_files/DiFF_z1_z2/initial_DiFF_z1_z2/: pm_DiFF_z1_z2_2.txt  pp_DiFF_z1_z2_-4.txt
output_files/DiFF_z_Mh/dist_1/: readme.md
output_files/DiFF_z_Mh/dist_2/: readme.md
output_files/DiFF_z_Mh/init_1/: pm_DiFF_zh_Mh_1.txt  pp_DiFF_zh_Mh_-5.txt  pp_DiFF_zh_Mh_1.txt
output_files/DiFF_z_Mh/init_2/: pp_DiFF_zh_Mh_1.txt  pp_DiFF_zh_Mh_3.txt
output_files/DiFF_z_Mh/init_3/: pp_DiFF_zh_Mh_-3.txt  pp_DiFF_zh_Mh_1.txt  readme.md
src/: AA.h.backup  BSpline.cc  BSpline_Interpolate.cc  BSpline_Interpolate1D.cc  BSpline_Interpolate2D.cc  BSpline_Interpolate3D.cc  Field-FeynmanModel.cc  QCDNUM_Evolution.cc  Tensor.cc  Tools.cc  test_BSpline_interpolate.h
tests/: Eigen_Solve_Linear_System_test.cc  initial_DiFF_z1_z2.cc  initial_DiFF_z_Mh.cc  output_TMD_DiFF.cc  save_DiFF_z1_z2_interpolation.h  test_bspline.cc
